; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/scripts/dtc/extr_treesource.c_dt_to_source.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/scripts/dtc/extr_treesource.c_dt_to_source.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.boot_info = type { i32, %struct.reserve_info* }
%struct.reserve_info = type { i8*, %struct.TYPE_2__, %struct.reserve_info* }
%struct.TYPE_2__ = type { i64, i64 }

@.str = private unnamed_addr constant [12 x i8] c"/dts-v1/;\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"%s: \00", align 1
@.str.2 = private unnamed_addr constant [35 x i8] c"/memreserve/\090x%016llx 0x%016llx;\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dt_to_source(i32* %0, %struct.boot_info* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.boot_info*, align 8
  %5 = alloca %struct.reserve_info*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.boot_info* %1, %struct.boot_info** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 (i32*, i8*, ...) @fprintf(i32* %6, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.boot_info*, %struct.boot_info** %4, align 8
  %9 = getelementptr inbounds %struct.boot_info, %struct.boot_info* %8, i32 0, i32 1
  %10 = load %struct.reserve_info*, %struct.reserve_info** %9, align 8
  store %struct.reserve_info* %10, %struct.reserve_info** %5, align 8
  br label %11

11:                                               ; preds = %36, %2
  %12 = load %struct.reserve_info*, %struct.reserve_info** %5, align 8
  %13 = icmp ne %struct.reserve_info* %12, null
  br i1 %13, label %14, label %40

14:                                               ; preds = %11
  %15 = load %struct.reserve_info*, %struct.reserve_info** %5, align 8
  %16 = getelementptr inbounds %struct.reserve_info, %struct.reserve_info* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %25

19:                                               ; preds = %14
  %20 = load i32*, i32** %3, align 8
  %21 = load %struct.reserve_info*, %struct.reserve_info** %5, align 8
  %22 = getelementptr inbounds %struct.reserve_info, %struct.reserve_info* %21, i32 0, i32 0
  %23 = load i8*, i8** %22, align 8
  %24 = call i32 (i32*, i8*, ...) @fprintf(i32* %20, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* %23)
  br label %25

25:                                               ; preds = %19, %14
  %26 = load i32*, i32** %3, align 8
  %27 = load %struct.reserve_info*, %struct.reserve_info** %5, align 8
  %28 = getelementptr inbounds %struct.reserve_info, %struct.reserve_info* %27, i32 0, i32 1
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = load %struct.reserve_info*, %struct.reserve_info** %5, align 8
  %32 = getelementptr inbounds %struct.reserve_info, %struct.reserve_info* %31, i32 0, i32 1
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = call i32 (i32*, i8*, ...) @fprintf(i32* %26, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0), i64 %30, i64 %34)
  br label %36

36:                                               ; preds = %25
  %37 = load %struct.reserve_info*, %struct.reserve_info** %5, align 8
  %38 = getelementptr inbounds %struct.reserve_info, %struct.reserve_info* %37, i32 0, i32 2
  %39 = load %struct.reserve_info*, %struct.reserve_info** %38, align 8
  store %struct.reserve_info* %39, %struct.reserve_info** %5, align 8
  br label %11

40:                                               ; preds = %11
  %41 = load i32*, i32** %3, align 8
  %42 = load %struct.boot_info*, %struct.boot_info** %4, align 8
  %43 = getelementptr inbounds %struct.boot_info, %struct.boot_info* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = call i32 @write_tree_source_node(i32* %41, i32 %44, i32 0)
  ret void
}

declare dso_local i32 @fprintf(i32*, i8*, ...) #1

declare dso_local i32 @write_tree_source_node(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
